--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -4,6 +4,15 @@ title: "Posts by Collection"
 permalink: /collection-archive/
 author_profile: true
 ---
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2DDDQTRB3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q2DDDQTRB3');
+</script>
 
 {% include base_path %}
 {% capture written_label %}'None'{% endcapture %}
