--- a/_pages/page-archive.html
+++ b/_pages/page-archive.html
@@ -4,7 +4,15 @@ title: "Page Archive"
 permalink: /page-archive/
 author_profile: false
 ---
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2DDDQTRB3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Q2DDDQTRB3');
+</script>
 {% include base_path %}
 {% for post in site.pages %}
   {% include archive-single.html %}
